<resources>
    <string name="app_name">ActivitiyDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_show_fragment">Add/Show Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="enter_firstname">enter firstname</string>
    <string name="enter_lastname">enter lastname</string>
    <string name="show_details">Show Details</string>
    <string name="enter_gender">enter gender</string>
    <string name="enter_address">enter address</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="gender">Gender:</string>
    <string name="address">Address:</string>
</resources>
