<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="@dimen/medium_size"
    tools:context=".SecondFragment">

    <EditText
        android:id="@+id/firstname_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_firstname"/>

    <EditText
        android:id="@+id/lastname_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_lastname"
        android:layout_below="@+id/firstname_edt"
        android:layout_marginTop="@dimen/small_size"/>

    <EditText
        android:id="@+id/gender_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_gender"
        android:layout_below="@+id/lastname_edt"
        android:layout_marginTop="@dimen/small_size"/>

    <EditText
        android:id="@+id/address_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_address"
        android:layout_below="@+id/gender_edt"
        android:layout_marginTop="@dimen/small_size"/>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/small_size"
        android:text="@string/submit"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_below="@+id/address_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/small_size"/>

</RelativeLayout>